fix messages in format blocks overflowing / hiding edit button
renamed vars to make easier to search in main.js and server.js,
rip out unused legacy code
switch horrible lines to use HTML templates

--- a/public/style.css
+++ b/public/style.css
@@ -1974,6 +1974,7 @@ pre {
     background-color: #222222ff;
     color: mintcream;
     filter: drop-shadow(0px 0px 1px #23e98e);
+    white-space: normal;
 }
 
 /*code inside box*/
